--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@ background-color: "#395692"
 {% endfor %}
 
 <!-- Pager -->
-{% if paginator.total_pages > 1 %}
-<ul class="pager">
-    {% if paginator.previous_page %}
-    <li class="previous">
-        <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&larr; Newer Posts</a>
-    </li>
-    {% endif %}
-    {% if paginator.next_page %}
-    <li class="next">
-        <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Older Posts &rarr;</a>
-    </li>
-    {% endif %}
-</ul>
+<!-- 分页链接 -->
+<div class="pagination">
+{% if paginator.previous_page %}
+<a href="/page{{ paginator.previous_page }}" class="previous">Previous</a>
+{% else %}
+<span class="previous">Previous</span>
 {% endif %}
-
+<span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+{% if paginator.next_page %}
+<a href="/page{{ paginator.next_page }}" class="next">Next</a>
+{% else %}
+<span class="next ">Next</span>
+{% endif %}
+</div>
