--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ background-color: "#395692"
 {% endif %}
 {% if  paginator.total_pages >1 %}
 {% if paginator.previous_page %}
-<a href="/home/" title="首页">首页</a>
+<a href="/" title="首页">首页</a>
 <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" title="上一页">
 <span class="fa fa-backward" style="padding:10px;"></span></a>
 {% endif %}
@@ -65,7 +65,7 @@ background-color: "#395692"
 {% if paginator.next_page %}
 <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" title="下一页">
 <i class="fa fa-forward" style="padding:10px;"></i></a>
-<a href="/home/paginate_{{ paginator.total_pages }}/" title="尾页">尾页</a>
+<a href="/page:{{ paginator.total_pages }}/" title="尾页">尾页</a>
 {% endif %}
 {% if paginator.page == paginator.total_pages %}
 <span style="margin-left:15px;"><i><b>已达尾页</b></i></span>
