--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
-description: "我干了什么 究竟拿了时间换了什么"
+description: "还记得年少时的梦吗"
+background-color: "#395692"
 ---
 
 {% for post in paginator.posts %}
