--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "你是我的梦想"
-header-img: "img/about-bg.jpg"
+background-color: "#458d5b"
 multilingual: true
 ---
 
