--- a/about.html
+++ b/about.html
@@ -1,8 +1,7 @@
 ---
 layout: page
-title: "About"
-description: "你是我的梦想"
-background-color: "#458d5b"
+title: "About"还记得年少时的梦吗"
+background-color: "#0a0f23"
 multilingual: true
 ---
 
