--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: "About"还记得年少时的梦吗"
+title: "About"
+description: "还记得年少时的梦吗"
 background-color: "#0a0f23"
 multilingual: true
 ---
