--- a/1.archive.html
+++ b/1.archive.html
@@ -1,7 +1,7 @@
 ---
 title: Archive
 layout: default
-description: keep hungry keep foolish
+description: "还记得年少时的梦吗"
 background-color: "#458d5b"
 ---
 
