--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: default
 title: 404
 hide-in-nav: true
 description: "你来到了没有知识的荒原 :("
-header-img: "img/404-bg.jpg"
+background-color: 55663D
 permalink: /404.html
 ---
 
