--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 ---
-layout: page
+layout: default
 title: 404
 hide-in-nav: true
 description: "你来到了没有知识的荒原 :("
-background-color: #55663D
+background-color: "#55663D"
 permalink: /404.html
 ---
 
