--- a/_private_article/面试/刘攀峰_Java工程师.html
+++ b/_private_article/面试/刘攀峰_Java工程师.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>&#x4E2A;&#x4EBA;&#x7B80;&#x5386;</title>
+      <title>&#x5218;&#x6500;&#x5CF0;_Java&#x5DE5;&#x7A0B;&#x5E08;</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -230,7 +230,7 @@ code.language-yaml {
 <li>&#x719F;&#x7EC3;&#x4F7F;&#x7528;IDE,git,Maven,Docker&#x7B49;&#x5F00;&#x53D1;,&#x6784;&#x5EFA;,&#x90E8;&#x7F72;&#x5DE5;&#x5177;</li>
 <li>&#x719F;&#x7EC3;&#x4F7F;&#x7528;Redis&#x53CA;Hbase&#x7B49;NoSQL&#x6570;&#x636E;&#x5E93;</li>
 <li>&#x4E86;&#x89E3;Linux&#x7CFB;&#x7EDF;&#x53CA;Shell&#x8BED;&#x8A00;,&#x719F;&#x7EC3;&#x4F7F;&#x7528;Ubuntu&#x8FDB;&#x884C;&#x5F00;&#x53D1;,&#x7EF4;&#x62A4;&#x516C;&#x53F8;&#x53CA;&#x4E2A;&#x4EBA;&#x670D;&#x52A1;&#x5668;,&#x80FD;&#x591F;&#x7F16;&#x5199;&#x5E38;&#x7528;&#x7684;Shell&#x811A;&#x672C;</li>
-<li>&#x4E86;&#x89E3;&#x5E38;&#x7528;&#x7684;&#x5E38;&#x7528;&#x7684;&#x4E2D;&#x95F4;&#x4EF6;,&#x6709;&#x4F7F;&#x7528;&#x7ECF;&#x9A8C;</li>
+<li>&#x4E86;&#x89E3;&#x53CA;&#x4F7F;&#x7528;&#x8FC7;hue,airflow&#x7B49;&#x5F00;&#x6E90;&#x8F6F;&#x4EF6;&#x8FDB;&#x884C;&#x6570;&#x636E;&#x7684;&#x5904;&#x7406;&#x53CA;&#x53EF;&#x89C6;&#x5316;&#x5DE5;&#x4F5C;.</li>
 </ul>
 <h4 style="margin-top:-10px;margin-bottom:10px">&#x9879;&#x76EE;&#x7ECF;&#x9A8C;</h4>
 <p><strong>1.Cardstream&#x9879;&#x76EE;</strong><br>
